# c-collection

./: CMakeLists.txt  README.md
src/: main.c  node.h
src/linkedlist/: CMakeLists.txt
src/linkedlist/src/: linkedlist.c  linkedlist.h
src/linkedlist/test/: test-linkedlist-append.c  test-linkedlist-build.c  test-linkedlist-get.c  test-linkedlist-insert.c  test-linkedlist-pop.c  test-linkedlist-push.c  test-linkedlist-remove.c  test_linkedlist_build.c  test_linkedlist_pop.c  test_linkedlist_push.c
src/list/src/: list.h
src/simple-queue/: CMakeLists.txt
src/simple-queue/src/: simple-queue.c  simple-queue.h
src/simple-queue/test/: test-simple-queue-build.c  test-simple-queue-dequeue.c  test-simple-queue-enqueue.c  test-simple-queue-peek.c
src/stack/: CMakeLists.txt
src/stack/src/: stack.c  stack.h
src/stack/test/: test-stack-build.c  test-stack-peek.c  test-stack-pop.c  test-stack-push.c
